--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,59 +33,59 @@ jobs:
           name: package
           path: reduxjs-toolkit*.tgz
 
-  # test:
-  #   name: Test Types with TypeScript ${{ matrix.ts }}
+  test:
+    name: Test Types with TypeScript ${{ matrix.ts }}
 
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       node: ['14.x']
-  #       ts: ['3.8', '3.9', '4.0', '4.1', 'next']
-  #   steps:
-  #     - name: Checkout repo
-  #       uses: actions/checkout@v2
+    needs: [build]
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node: ['14.x']
+        ts: ['3.8', '3.9', '4.0', '4.1', 'next']
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
 
-  #     - name: Use node ${{ matrix.node }}
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: ${{ matrix.node }}
+      - name: Use node ${{ matrix.node }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
 
-  #     - uses: c-hive/gha-npm-cache@v1
+      - uses: c-hive/gha-npm-cache@v1
 
-  #     - name: Install deps
-  #       run: npm ci --ignore-scripts
+      - name: Install deps
+        run: npm ci --ignore-scripts
 
-  #     - name: Install TypeScript ${{ matrix.ts }}
-  #       run: npm install typescript@${{ matrix.ts }} --ignore-scripts
+      - name: Install TypeScript ${{ matrix.ts }}
+        run: npm install typescript@${{ matrix.ts }} --ignore-scripts
 
-  #     - uses: actions/download-artifact@v2
-  #       with:
-  #         name: package
+      - uses: actions/download-artifact@v2
+        with:
+          name: package
 
-  #     - name: Unpack build artifact to dist
-  #       run: tar -xzvf reduxjs-toolkit-*.tgz --strip-components=1 package/dist
+      - name: Unpack build artifact to dist
+        run: tar -xzvf reduxjs-toolkit-*.tgz --strip-components=1 package/dist
 
-  #     - name: Remap @redux/toolkit from src to dist
-  #       run: |
-  #         sed -i -e 's|@reduxjs/toolkit": \["./src"\]|@reduxjs/toolkit": ["."]|' ./type-tests/files/tsconfig.json
+      - name: Remap @redux/toolkit from src to dist
+        run: |
+          sed -i -e 's|@reduxjs/toolkit": \["./src"\]|@reduxjs/toolkit": ["."]|' ./type-tests/files/tsconfig.json
 
-  #     - name: Prefix `freeze` re-export for pre-3.7 TS versions with @ts-ignore
-  #       if: ${{ matrix.ts < 3.7 }}
-  #       run: |
-  #         sed -i -e "/import .* freeze .* from 'immer'/s/^/\/\/ @ts-ignore\n/" dist/typings.d.ts
-  #         sed -i -e "/  freeze,/s/^/  \/\/ @ts-ignore\n/" src/index.ts
+      - name: Prefix `freeze` re-export for pre-3.7 TS versions with @ts-ignore
+        if: ${{ matrix.ts < 3.7 }}
+        run: |
+          sed -i -e "/import .* freeze .* from 'immer'/s/^/\/\/ @ts-ignore\n/" dist/typings.d.ts
+          sed -i -e "/  freeze,/s/^/  \/\/ @ts-ignore\n/" src/index.ts
 
-  #     - name: Use typings-tester for old TS versions
-  #       if: ${{ matrix.ts < 3.9 }}
-  #       run: |
-  #         sed -i -e 's/"cd type-tests.*"/"npm run test type-tests"/' package.json
-  #         sed -i -e 's/@ts-expect-error/typings:expect-error/' type-tests/files/*.typetest.ts
-  #         sed -i -e 's/@ts-expect-error/@ts-ignore/' type-tests/files/*.ts
-  #         mv type-tests/types.test.disabled.ts type-tests/types.test.ts
+      - name: Use typings-tester for old TS versions
+        if: ${{ matrix.ts < 3.9 }}
+        run: |
+          sed -i -e 's/"cd type-tests.*"/"npm run test type-tests"/' package.json
+          sed -i -e 's/@ts-expect-error/typings:expect-error/' type-tests/files/*.typetest.ts
+          sed -i -e 's/@ts-expect-error/@ts-ignore/' type-tests/files/*.ts
+          mv type-tests/types.test.disabled.ts type-tests/types.test.ts
 
-  #     - name: Test types
-  #       run: |
-  #         ./node_modules/.bin/tsc --version
-  #         npm run type-tests
+      - name: Test types
+        run: |
+          ./node_modules/.bin/tsc --version
+          npm run type-tests
