--- a/src/query/react/versionedTypes/package.json
+++ b/src/query/react/versionedTypes/package.json
@@ -1,12 +1,12 @@
 {
   "typesVersions": {
     ">=4.1": {
-      "index.d.ts": [
+      "index": [
         "./ts41Types.d.ts"
       ]
     },
     "<4.1": {
-      "index.d.ts": [
+      "index": [
         "./ts40Types.d.ts"
       ]
     }
