--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,7 @@
   base    = "website"
   publish = "build"
   command = "npm run netlify-build  && cp _redirects ./build"
-  #ignore = "git diff --quiet HEAD^ HEAD docs website"
-  ignore = "true"
+  ignore = "git diff --quiet HEAD^ HEAD docs website"
 
 [build.environment]
-NODE_VERSION = "10"
+NODE_VERSION = "14"
