--- a/package.json
+++ b/package.json
@@ -46,9 +46,18 @@
     "convert-source-map": "^1.7.0",
     "cross-fetch": "^3.1.4",
     "esbuild": "^0.11.13",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "fs-extra": "^9.1.0",
     "invariant": "^2.2.4",
+    "jest": "^26.6.3",
     "json-stringify-safe": "^5.0.1",
     "magic-string": "^0.25.7",
     "merge-source-map": "^1.1.0",
@@ -58,10 +67,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
+    "rollup": "^2.47.0",
     "rollup-plugin-strip-code": "^0.2.6",
     "source-map": "^0.7.3",
     "terser": "^5.6.1",
-    "tsdx": "^0.14.1",
+    "ts-jest": "^26.5.5",
     "tslib": "^1.10.0",
     "typescript": "^4.2.3",
     "yargs": "^15.3.1"
@@ -69,12 +79,11 @@
   "scripts": {
     "build-ci": "rimraf dist && tsc && node scripts/cli.js",
     "build": "rimraf dist && tsc && node scripts/cli.js --local",
-    "dev": "tsdx watch  --format cjs,esm,system,umd",
     "format": "prettier --write \"src/**/*.{ts,tsx}\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/**/*.{ts,tsx}\" \"docs/*/**.md\"",
-    "lint": "tsdx lint src",
+    "lint": "eslint src",
     "prepare": "npm run build-ci",
-    "test": "tsdx test --runInBand",
+    "test": "jest --runInBand",
     "type-tests": "yarn tsc -p src/tests && yarn tsc -p src/query/tests"
   },
   "files": [
