--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,10 @@
 
 [build.environment]
 NODE_VERSION = "14"
+
+[[plugins]]
+  package = "netlify-plugin-cache"
+  [plugins.inputs]
+    paths = [
+      "node_modules/.cache",
+    ]
