--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "magic-string": "^0.25.7",
     "merge-source-map": "^1.1.0",
     "msw": "^0.28.2",
+    "netlify-plugin-cache": "^1.0.3",
     "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
