--- a/website/package.json
+++ b/website/package.json
@@ -8,11 +8,11 @@
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.70",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.70",
+    "@docusaurus/core": "2.0.0-alpha.75",
+    "@docusaurus/preset-classic": "2.0.0-alpha.75",
     "classnames": "^2.2.6",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "remark-typescript-tools": "^1.0.6",
     "typescript": "^4.2.4"
   },
