--- a/packages/rtk-query-codegen-openapi/package.json
+++ b/packages/rtk-query-codegen-openapi/package.json
@@ -56,7 +56,7 @@
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.0.2",
-    "@kahirokunn/oazapfts": "3.6.0",
+    "@rtk-query/oazapfts-patched": "^3.6.0-2",
     "commander": "^6.2.0",
     "prettier": "^2.2.1",
     "semver": "^7.3.5",
