--- a/examples/action-listener/counter/package.json
+++ b/examples/action-listener/counter/package.json
@@ -11,7 +11,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "typescript": "~4.2.4"
   },
   "scripts": {
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-watch-typeahead": "^1.1.0"
   }
 }
