--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -96,7 +96,8 @@ jobs:
       fail-fast: false
       matrix:
         node: ['16.x']
-        ts: ['4.1', '4.2', '4.3', '4.4', '4.5', '4.6', '4.7']
+        ts: ['4.1', '4.2', '4.3', '4.4', '4.5', '4.6', '4.7', 'next']
+    continue-on-error: ${{ matrix.ts == 'next' }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
