--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -97,6 +97,7 @@
     "query"
   ],
   "dependencies": {
+    "@phryneas/ts-version": "^1.0.1",
     "immer": "^9.0.7",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
