--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "npm:18.1.0",
     "react-dom": "npm:18.1.0",
     "resolve": "1.22.1",
+    "ts-node": "10.4.0",
     "@types/react": "npm:18.0.12",
     "@types/react-dom": "npm:18.0.5",
     "@types/inquirer": "npm:8.2.1",
