--- a/packages/toolkit/query/package.json
+++ b/packages/toolkit/query/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "../dist/query/index.js",
-  "module": "../dist/query/rtk-query.esm.js",
+  "module": "../dist/query/rtk-query.modern.js",
   "unpkg": "../dist/query/rtk-query.umd.min.js",
   "types": "../dist/query/index.d.ts",
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
