--- a/packages/rtk-query-codegen-openapi/package.json
+++ b/packages/rtk-query-codegen-openapi/package.json
@@ -43,7 +43,7 @@
     "babel-jest": "^26.6.3",
     "chalk": "^4.1.0",
     "del": "^6.0.0",
-    "esbuild": "^0.13.10",
+    "esbuild": "~0.17",
     "esbuild-runner": "^2.2.1",
     "husky": "^4.3.6",
     "jest": "^27",
