--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -45,7 +45,7 @@
     "axios": "^0.19.2",
     "console-testing-library": "^0.3.1",
     "convert-source-map": "^1.7.0",
-    "esbuild": "^0.11.13",
+    "esbuild": "~0.17",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
