--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/traverse": "7.19.3",
     "@babel/types": "7.19.3",
     "console-testing-library": "patch:console-testing-library@npm:0.3.1#.yarn/patches/console-testing-library__npm_0.3.1.patch",
+    "esbuild": "0.17.0",
     "msw": "patch:msw@npm:0.40.2#.yarn/patches/msw-npm-0.40.2-2107d48752",
     "jscodeshift": "0.13.1",
     "react-redux": "npm:8.0.2",
