--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -73,14 +73,16 @@
     "terser": "^5.6.1",
     "ts-jest": "^27",
     "tslib": "^1.10.0",
+    "tsx": "^3.12.2",
     "typescript": "~4.9",
     "yargs": "^15.3.1"
   },
   "scripts": {
-    "build-ci": "yarn rimraf dist && yarn tsc && node scripts/cli.js --skipExtraction",
+    "run-build": "tsx ./scripts/build.ts",
+    "build-ci": "yarn rimraf dist && yarn tsc && yarn run-build --skipExtraction",
     "build-prepare": "npm run build-ci",
-    "build": "yarn rimraf dist && yarn tsc && node scripts/cli.js --local --skipExtraction",
-    "build-only": "yarn rimraf dist && yarn tsc && node scripts/cli.js --skipExtraction",
+    "build": "yarn rimraf dist && yarn tsc && yarn run-build --local --skipExtraction",
+    "build-only": "yarn rimraf dist && yarn tsc && yarn run-build --skipExtraction",
     "format": "prettier --write \"(src|examples)/**/*.{ts,tsx}\" \"**/*.md\"",
     "format:check": "prettier --list-different \"(src|examples)/**/*.{ts,tsx}\" \"docs/*/**.md\"",
     "lint": "eslint src examples",
