--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -22,10 +22,28 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/index.js",
+  "type": "module",
   "module": "dist/redux-toolkit.modern.js",
-  "unpkg": "dist/redux-toolkit.umd.min.js",
+  "main": "dist/cjs/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/redux-toolkit.modern.js",
+      "default": "./dist/cjs/index.js"
+    },
+    "./query": {
+      "types": "./dist/query/index.d.ts",
+      "import": "./dist/query/rtk-query.modern.js",
+      "default": "./dist/query/cjs/index.js"
+    },
+    "./query/react": {
+      "types": "./dist/query/react/index.d.ts",
+      "import": "./dist/query/react/rtk-query-react.modern.js",
+      "default": "./dist/query/react/cjs/index.js"
+    }
+  },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.13.2",
     "@size-limit/preset-small-lib": "^4.11.0",
