--- a/packages/toolkit/query/package.json
+++ b/packages/toolkit/query/package.json
@@ -2,10 +2,18 @@
   "name": "@reduxjs/toolkit-query",
   "version": "1.0.0",
   "description": "",
-  "main": "../dist/query/index.js",
+  "type": "module",
   "module": "../dist/query/rtk-query.modern.js",
-  "unpkg": "../dist/query/rtk-query.umd.min.js",
-  "types": "../dist/query/index.d.ts",
+  "main": "../dist/query/cjs/index.js",
+  "types": "./../dist/query/index.d.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "types": "./../dist/query/index.d.ts",
+      "import": "./../dist/query/rtk-query.modern.js",
+      "default": "./../dist/query/cjs/index.js"
+    }
+  },
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
   "sideEffects": false
