--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -119,7 +119,7 @@
   "dependencies": {
     "immer": "^9.0.16",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2",
+    "redux-thunk": "3.0.0-alpha.1",
     "reselect": "^4.1.7"
   },
   "peerDependencies": {
