--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "@babel/helper-compilation-targets": "7.19.3",
     "@babel/traverse": "7.19.3",
     "@babel/types": "7.19.3",
-    "console-testing-library": "patch:console-testing-library@npm:0.3.1#.yarn/patches/console-testing-library__npm_0.3.1.patch",
     "esbuild": "0.17.0",
+    "jest-snapshot": "29.3.1",
     "msw": "patch:msw@npm:0.40.2#.yarn/patches/msw-npm-0.40.2-2107d48752",
     "jscodeshift": "0.13.1",
     "react-redux": "npm:8.0.2",
@@ -63,7 +63,8 @@
     "docs/react-dom": "npm:17.0.2",
     "docs/@types/react-dom": "npm:17.0.11",
     "docs/@types/react": "npm:17.0.11",
-    "type-fest": "2.19.0"
+    "type-fest": "2.19.0",
+    "console-testing-library@0.6.1": "patch:console-testing-library@npm%3A0.6.1#./.yarn/patches/console-testing-library-npm-0.6.1-4d9957d402.patch"
   },
   "scripts": {
     "build": "yarn build:packages",
