--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -61,7 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "axios": "^0.19.2",
-    "console-testing-library": "^0.3.1",
+    "console-testing-library": "0.6.1",
     "convert-source-map": "^1.7.0",
     "esbuild": "~0.17",
     "eslint": "^7.25.0",
@@ -75,7 +75,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fs-extra": "^9.1.0",
     "invariant": "^2.2.4",
-    "jest": "^27",
+    "jsdom": "^21.0.0",
     "json-stringify-safe": "^5.0.1",
     "magic-string": "^0.25.7",
     "merge-source-map": "^1.1.0",
@@ -89,10 +89,10 @@
     "size-limit": "^4.11.0",
     "source-map": "^0.7.3",
     "terser": "^5.6.1",
-    "ts-jest": "^27",
     "tslib": "^1.10.0",
     "tsx": "^3.12.2",
     "typescript": "~4.9",
+    "vitest": "^0.27.2",
     "yargs": "^15.3.1"
   },
   "scripts": {
@@ -104,7 +104,7 @@
     "format": "prettier --write \"(src|examples)/**/*.{ts,tsx}\" \"**/*.md\"",
     "format:check": "prettier --list-different \"(src|examples)/**/*.{ts,tsx}\" \"docs/*/**.md\"",
     "lint": "eslint src examples",
-    "test": "jest --runInBand",
+    "test": "vitest",
     "type-tests": "yarn tsc -p src/tests/tsconfig.typetests.json && yarn tsc -p src/query/tests/tsconfig.typetests.json",
     "prepack": "npm run build-prepare"
   },
