--- a/examples/query/react/graphql/package.json
+++ b/examples/query/react/graphql/package.json
@@ -11,7 +11,7 @@
     "@emotion/styled": "^11.3.0",
     "@mswjs/data": "^0.3.0",
     "@reduxjs/toolkit": "^1.6.0-rc.1",
-    "@rtk-query/graphql-request-base-query": "^2.0.0",
+    "@rtk-query/graphql-request-base-query": "workspace:^",
     "faker": "^5.5.3",
     "framer-motion": "^2.9.5",
     "graphql": "^15.5.0",
@@ -21,7 +21,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "3.11.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "6.3.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
