--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "netlify-plugin-cache": "^1.0.3",
     "prettier": "^2.2.1",
-    "release-it": "^14.12.5"
+    "release-it": "^14.12.5",
+    "serve": "^14.2.0"
   },
   "resolutions": {
     "@babel/core": "7.19.3",
