--- a/packages/rtk-query-codegen-openapi/package.json
+++ b/packages/rtk-query-codegen-openapi/package.json
@@ -58,10 +58,11 @@
     "@apidevtools/swagger-parser": "^10.0.2",
     "@rtk-query/oazapfts-patched": "^3.6.0-2",
     "commander": "^6.2.0",
+    "oazapfts": "https://github.com/cvereterra/oazapfts.git",
     "prettier": "^2.2.1",
     "semver": "^7.3.5",
     "swagger2openapi": "^7.0.4",
-    "typescript": ">=4.1 <=4.5"
+    "typescript": "4.9.3"
   },
   "husky": {
     "hooks": {
