--- a/packages/rtk-query-codegen-openapi/package.json
+++ b/packages/rtk-query-codegen-openapi/package.json
@@ -58,7 +58,7 @@
     "@apidevtools/swagger-parser": "^10.0.2",
     "@rtk-query/oazapfts-patched": "^3.6.0-2",
     "commander": "^6.2.0",
-    "oazapfts": "https://github.com/cvereterra/oazapfts.git",
+    "oazapfts": "https://github.com/cvereterra/oazapfts#2323e446033d7a17b0445028b83c48c2fd07df7c",
     "prettier": "^2.2.1",
     "semver": "^7.3.5",
     "swagger2openapi": "^7.0.4",
