--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -139,7 +139,7 @@ jobs:
       fail-fast: false
       matrix:
         node: ['16.x']
-        example: ['cra4', 'cra5']
+        example: ['cra4', 'cra5', 'next']
     defaults:
       run:
         working-directory: ./examples/publish-ci/${{ matrix.example }}
