--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,6 +45,13 @@ jobs:
       - name: Install deps
         run: yarn install
 
+      # Read existing version, reuse that, add a Git short hash
+      - name: Set build version to Git commit
+        run: node scripts/writeGitVersion.js $(git rev-parse --short HEAD)
+
+      - name: Check updated version
+        run: jq .version package.json
+
       - name: Pack
         run: yarn pack
 
@@ -123,6 +130,9 @@ jobs:
       - name: Install build artifact
         run: yarn add ./package.tgz
 
+      - name: Show installed RTK versions
+        run: yarn info @reduxjs/toolkit
+
       - run: sed -i -e /@remap-prod-remove-line/d ./tsconfig.base.json ./jest.config.js ./src/tests/*.* ./src/query/tests/*.*
 
       - name: Test types
@@ -169,6 +179,9 @@ jobs:
 
       - name: Install RTK build artifact
         run: yarn add ./package.tgz
+
+      - name: Show installed RTK versions
+        run: yarn info @reduxjs/toolkit
 
       - name: Build example
         run: yarn build
