--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,7 +47,7 @@ jobs:
 
       # Read existing version, reuse that, add a Git short hash
       - name: Set build version to Git commit
-        run: node scripts/writeGitVersion.js $(git rev-parse --short HEAD)
+        run: node scripts/writeGitVersion.mjs $(git rev-parse --short HEAD)
 
       - name: Check updated version
         run: jq .version package.json
