--- a/packages/toolkit/tsconfig.base.json
+++ b/packages/toolkit/tsconfig.base.json
@@ -34,9 +34,11 @@
     "baseUrl": ".",
     "paths": {
       "@reduxjs/toolkit": ["src/index.ts"], // @remap-prod-remove-line,
-      "@reduxjs/toolkit/react": ["src/react.ts"], // @remap-prod-remove-line
+      "@reduxjs/toolkit/react": ["src/react/index.ts"], // @remap-prod-remove-line
       "@reduxjs/toolkit/query": ["src/query/index.ts"], // @remap-prod-remove-line
       "@reduxjs/toolkit/query/react": ["src/query/react/index.ts"], // @remap-prod-remove-line
+      // for type imports in tests only
+      "@reduxjs/toolkit/dist/*": ["src/*"], // @remap-prod-remove-line
       // for type imports in tests only
       "@reduxjs/toolkit/dist/query/*": ["src/query/*"], // @remap-prod-remove-line
       // internal imports in tests only
