--- a/packages/toolkit/tsconfig.base.json
+++ b/packages/toolkit/tsconfig.base.json
@@ -39,6 +39,8 @@
       "@reduxjs/toolkit/query": ["src/query/index.ts"], // @remap-prod-remove-line
       "@reduxjs/toolkit/query/react": ["src/query/react/index.ts"], // @remap-prod-remove-line
       // for type imports in tests only
+      "@reduxjs/toolkit/dist/*": ["src/*"], // @remap-prod-remove-line
+      // for type imports in tests only
       "@reduxjs/toolkit/dist/query/*": ["src/query/*"], // @remap-prod-remove-line
       // internal imports in tests only
       "@internal/*": ["src/*"]
