--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -113,7 +113,7 @@
     "query"
   ],
   "dependencies": {
-    "immer": "^9.0.16",
+    "immer": "^10.0.0-beta.4",
     "redux": "5.0.0-alpha.4",
     "redux-thunk": "3.0.0-alpha.3",
     "reselect": "^4.1.7"
