--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -89,6 +89,7 @@
     "source-map": "^0.7.3",
     "terser": "^5.6.1",
     "tslib": "^1.10.0",
+    "tsup": "^6.7.0",
     "tsx": "^3.12.2",
     "typescript": "~4.9",
     "vitest": "^0.27.2",
