--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -96,17 +96,15 @@
     "yargs": "^15.3.1"
   },
   "scripts": {
-    "run-build": "tsx ./scripts/build.ts",
-    "build-ci": "yarn rimraf dist && yarn tsc && yarn run-build --skipExtraction",
-    "build-prepare": "npm run build-ci",
-    "build": "yarn rimraf dist && echo Compiling... && yarn tsc && yarn run-build --local --skipExtraction",
-    "build-only": "yarn rimraf dist && yarn tsc && yarn run-build --skipExtraction",
+    "run-build": "tsup",
+    "build": "yarn rimraf dist && echo Compiling TS... &&  yarn tsc && yarn run-build",
+    "build-only": "yarn rimraf dist && yarn run-build",
     "format": "prettier --write \"(src|examples)/**/*.{ts,tsx}\" \"**/*.md\"",
     "format:check": "prettier --list-different \"(src|examples)/**/*.{ts,tsx}\" \"docs/*/**.md\"",
     "lint": "eslint src examples",
     "test": "vitest",
     "type-tests": "yarn tsc -p src/tests/tsconfig.typetests.json && yarn tsc -p src/query/tests/tsconfig.typetests.json",
-    "prepack": "npm run build-prepare"
+    "prepack": "yarn build"
   },
   "files": [
     "dist/",
