--- a/packages/rtk-query-codegen-openapi/package.json
+++ b/packages/rtk-query-codegen-openapi/package.json
@@ -62,7 +62,7 @@
     "prettier": "^2.2.1",
     "semver": "^7.3.5",
     "swagger2openapi": "^7.0.4",
-    "typescript": "4.9.3"
+    "typescript": "^5.0.4"
   },
   "husky": {
     "hooks": {
