--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -108,7 +108,7 @@
     "redux": "5.0.0-alpha.5",
     "redux-thunk": "3.0.0-alpha.3",
     "reselect": "^4.1.8",
-    "uncheckedindexed": "https://github.com/EskiMojo14/uncheckedindexed"
+    "uncheckedindexed": "^0.0.1"
   },
   "peerDependencies": {
     "react": "^16.9.0 || ^17.0.0 || ^18",
