--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -107,8 +107,7 @@
     "immer": "^10.0.1",
     "redux": "5.0.0-alpha.5",
     "redux-thunk": "3.0.0-alpha.3",
-    "reselect": "^4.1.8",
-    "uncheckedindexed": "^0.0.1"
+    "reselect": "^4.1.8"
   },
   "peerDependencies": {
     "react": "^16.9.0 || ^17.0.0 || ^18",
